--- a/views/recipeAdd.html
+++ b/views/recipeAdd.html
@@ -20,6 +20,7 @@
       class="form-control"
       id="cuisine"
       ng-model="recipe.cuisine"
+      placeholder="like Indian, Chinese etc"
     />
   </div>
   <div class="mb-3">
@@ -31,6 +32,7 @@
       class="form-control"
       id="cuisine"
       ng-model="recipe.dishType"
+      placeholder="like breakfast, main dish etc"
     />
   </div>
   <div class="mb-3">
@@ -42,6 +44,7 @@
       class="form-control"
       id="cuisine"
       ng-model="recipe.calorie"
+      placeholder="in Kcal"
     />
   </div>
   <button type="submit" class="btn btn-primary">Add Recipe</button>
